2009-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	Minor cleanup and simplification.
	* filecache.el (file-cache-add-directory)
	(file-cache-add-directory-recursively)
	(file-cache-add-from-file-cache-buffer)
	(file-cache-delete-file-regexp, file-cache-delete-directory)
	(file-cache-files-matching-internal, file-cache-display): Use dolist.
	(file-cache-temp-minibuffer-message): Delete function.
	(file-cache-minibuffer-complete): Use minibuffer-message instead.

	* progmodes/perl-mode.el (perl-font-lock-special-syntactic-constructs):
	Don't signal an error when bumping into EOB in tr, s, or y.

2009-11-29  Juri Linkov  <juri@jurta.org>

	* startup.el (fancy-about-text): Fix wording of Guided Tour.
	(Bug#4960)

	* descr-text.el (describe-char-unidata-list): Use lowercase name
	for "Unicode name" like in other tags.

2009-11-29  Juri Linkov  <juri@jurta.org>

	* ediff-util.el (ediff-minibuffer-with-setup-hook):
	New compatibility macro.
	(ediff-read-file-name): Use it instead of `minibuffer-with-setup-hook'.

2009-11-29  Juri Linkov  <juri@jurta.org>

	Add defcustom to define the cycling order of `recenter-top-bottom'.
	(Bug#4981)

	* window.el (recenter-last-op): Doc fix.
	(recenter-positions): New defcustom.
	(recenter-top-bottom): Rewrite to use `recenter-positions'.
	(move-to-window-line-top-bottom): Rewrite to use `recenter-positions'.

2009-11-29  Michael Albinus  <michael.albinus@gmx.de>

	Improve integration of Tramp and ange-ftp in eshell.

	* eshell/em-unix (eshell/whoami): Make it a defun but a defalias.
	(eshell/su): Flatten args.  Apply better args parsing.  Use "cd".
	(eshell/sudo): Flatten args.  Let-bind `default-directory'.

	* eshell/esh-util.el (top): Require also Tramp when compiling.
	(eshell-directory-files-and-attributes): Check for FTP remote
	connection.
	(eshell-parse-ange-ls): Let-bind `ange-ftp-name-format',
	`ange-ftp-ftp-name-arg', `ange-ftp-ftp-name-res'.
	(eshell-file-attributes): Handle ".".  Return `entry'.
